--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,22 @@ $rose-900: hsl(14, 65%, 9%);
 $rose-100: hsl(13, 31%, 94%);
 $rose-50: hsl(20, 50%, 98%);
 
+.container {
+  width: 250px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $rose-50;
+}
+
+.product-img {
+  width: 90%;
+  height: auto;
+  background-color: $rose-100;
+}
+
 body {
   font-family: "Red Hat Text", sans-serif;
 }
@@ -29,6 +45,7 @@ body {
 .button {
   background-color: $rose-100;
   padding: 15px 20px;
+  margin-top: -1.5rem;
 }
 
 .icon {
