--- a/src/Content/Cart.css
+++ b/src/Content/Cart.css
@@ -1,277 +1,275 @@
 @charset "UTF-8";
 .order-confirmed--container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100%;
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    background-color: rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  /* height: 100%; */
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .order-confirmed {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .cart--Title h1 {
-    color: var(--Red);
-    font-weight: 700;
-    font-size: 25px;
+  color: var(--Red);
+  font-weight: 700;
+  font-size: 25px;
 }
 
 .cart--Empty {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+  gap: 10px;
 }
 
 .cart--Order {
-    display: flex;
-    flex-direction: column;
-   /*background-color: red;*/
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .cart--Order--info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    /*background-color: green;*/
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .cart--Order--info div {
-    margin-top: 3px;
+  margin-top: 3px;
 }
 
-.cart--Order--h1 h2{
-    color: var(--Rose900);
-    font-weight: 600;
-    font-size: 16px;
+.cart--Order--h1 h2 {
+  color: var(--Rose900);
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .cart--Order--quantity {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
 }
 
 .cart--Order--quantityh3 h3 {
-    color: var(--Red);
-    font-weight: 600;
-    font-size: 16px;
+  color: var(--Red);
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .cart--Order--quantity p {
-    color: var(--Rose500);
+  color: var(--Rose500);
 }
 
 .cart--Order--quantityp p {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .cart--Order--quantitym p {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .cart--Order--delete {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    cursor: pointer;
-    /*background-color: blue;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  cursor: pointer;
 }
 
 .cart--Order--delete img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 3px;
-    border: 1px solid var(--Rose300);
-    border-radius: 50%;
-    transition: .4s
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3px;
+  border: 1px solid var(--Rose300);
+  border-radius: 50%;
+  transition: 0.4s;
 }
 
 .cart--Order--delete img:hover {
-    border-color: var(--Rose900);
-    filter: brightness(0%);
+  border-color: var(--Rose900);
+  filter: brightness(0%);
 }
 
 .cart--Line {
-    width: 100%;
-    height: 1px;
-    background-color: var(--Rose300);
+  width: 100%;
+  height: 1px;
+  background-color: var(--Rose300);
 }
 
 .cart--Total {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .cart--Total h2 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .cart--Text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    width: 80%;
-    border-radius: 10px;
-    padding: 10px;
-    gap: 5px;
-    background-color: var(--Rose100);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+  border-radius: 10px;
+  padding: 10px;
+  gap: 5px;
+  background-color: var(--Rose100);
 }
 
 .cart--Text span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .cart--Button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cart--Button button {
-    width: 80%;
-    font-size: 16px;
-    font-weight: 600;
-    border: none;
-    padding: 15px;
-    border-radius: 20px;
-    color: var(--Rose50);
-    background-color: var(--Red);
-    transition: .4s;
-    cursor: pointer;
+  width: 80%;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  padding: 15px;
+  border-radius: 20px;
+  color: var(--Rose50);
+  background-color: var(--Red);
+  transition: 0.4s;
+  cursor: pointer;
 }
 
 .cart--Button button:hover {
-    background-color: hsl(14, 84%, 32%);
+  background-color: hsl(14, 84%, 32%);
 }
 
-
-/*  Order Confirmed  */
-
-
 .order-confirmed {
-    display: flex;
-    justify-content: center;
-    width: 45%;
-    padding: 40px;
-    border-radius: 10px;
-    background-color: var(--Rose50);
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  width: 45%;
+  padding: 40px;
+  border-radius: 10px;
+  background-color: var(--Rose50);
+  gap: 10px;
 }
 
 .order-confirmed img {
-    width: 50px;
+  width: 50px;
 }
 
 .order-confirmed h1 {
-    font-size: 3vw;
-    font-weight: 700;
+  font-size: 3vw;
+  font-weight: 700;
 }
 
 .cart--OrderConfirmed {
-    display: flex;
-    flex-direction: column;
-   /* background-color: red;*/
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 
 .cart--Order--infoConfirmed {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    padding: 1px;
-    border-radius: 10px 10px 0px 0px;
-    background-color: var(--Rose100);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 1px;
+  border-radius: 10px 10px 0px 0px;
+  background-color: var(--Rose100);
 }
 
 .cart--Order--infoConfirmed div {
-    margin: 4px;
+  margin: 4px;
 }
 
 .cart--Order--infoConfirmed img {
-    width: 60%;
-    border-radius: 10px;
+  width: 60%;
+  border-radius: 10px;
 }
 
 .cart--Order--infoConfirmedIMGLIST {
-    display: flex;
-    align-items: center;
-    width: 85%;
+  display: flex;
+  align-items: center;
+  width: 85%;
 }
 
 .cart--Total--confirmed {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    border-radius: 0px 0px 20px 20px;
-    background-color: var(--Rose100);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  border-radius: 0px 0px 20px 20px;
+  background-color: var(--Rose100);
 }
 
 .cart--Total--confirmed h2 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .order-confirmed button {
-    width: 100%;
-    font-size: 16px;
-    font-weight: 600;
-    border: none;
-    padding: 15px;
-    border-radius: 20px;
-    color: var(--Rose50);
-    background-color: var(--Red);
-    transition: .4s;
-    cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  padding: 15px;
+  border-radius: 20px;
+  color: var(--Rose50);
+  background-color: var(--Red);
+  transition: 0.4s;
+  cursor: pointer;
 }
 
 .order-confirmed button:hover {
-    background-color: hsl(14, 84%, 32%);
+  background-color: hsl(14, 84%, 32%);
 }
 
-
 @media screen and (max-width: 1050px) {
+  .order-confirmed--container {
+    justify-content: flex-end;
+  }
 
-    .order-confirmed--container {
-        justify-content: flex-end;
-       /* background-color: blue;*/
-    }
-    
-    .order-confirmed {
-        display: flex;
-        justify-content: center;
-        padding: 5px;
-        width: 100vw;
-        height: 90vh;
-        border-radius: 10px;
-        padding: 10px;
-        gap: 20px;
-    }
+  .order-confirmed {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    width: 100vw;
+    height: 90vh;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 20px;
+  }
 
-    .order-confirmed h1 {
-        font-size: 40px;
-    }
+  .order-confirmed h1 {
+    font-size: 40px;
+  }
 
-    .cart--Total--confirmed h2 {
-        font-size: 30px;
-    }
+  .cart--Total--confirmed h2 {
+    font-size: 30px;
+  }
+}
+
+.text-overflow {
+  overflow-y: scroll;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  /* background-color: red; */
 }
